fix: tweak headers in dark mode

--- a/styles/pf2e-downtime.scss
+++ b/styles/pf2e-downtime.scss
@@ -150,3 +150,16 @@
 }
 
 
+// DARK MODE ADJUSTMENTS
+body.theme-dark {
+    .pf2e-downtime { 
+
+        // PROJECT EDIT APPLICATION
+
+        .pf2e-downtime-project-editor {
+            header.pf2e-downtime-project-editor-header{  
+                color: var(--color-text-light-heading);
+            }
+        }
+    }
+}
